--- a/Recipes/Muffuletta.html
+++ b/Recipes/Muffuletta.html
@@ -11,8 +11,9 @@
     </head>
     <body>
         <a href="../index.html">Back to home</a>
+        <h1>Odin Recipes</h1>
         <h1>Real N'awlins Muffuletta</h1>
-            <img src="/Resources/Real Nawlins Muffuletta.jpg" height="240" width="370">
+            <img src="/Resources/Real Nawlins Muffuletta.jpg" height="240" width="370" alt="Real Nawlins Muffeletta">
             <h3>A genuine muffuletta should be made on oven-fresh round Italian bread loves topped with sesame seeds.<br>
                 The spicy, tangy olive salad is what really sets this meat and cheese sandwich apart.<br> These gigantic sandwiches were invented a century ago at Sicilian Deli here in New Orleans.<br>
                 Be sure to use high-quality ingredients as it really makes a difference!</h3>
