--- a/Recipes/Nutella.html
+++ b/Recipes/Nutella.html
@@ -9,9 +9,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-
-        
-
+        <h1>Odin Recipes</h1>
+        <h1>Nutella Swirl Cheesecake Bars</h1>
+        <img src="../Resources/NutellaSwirlCheese.jpg" height="340" width="430" alt="Picture of the Nutella Cheesecake bars">
+        <h3>For these Nutella swirl cheesecake bars, a rich Nutella-swirled cheesecake filling<br> 
+            sits atop an OREO and hazelnut-studded crust for a truly delectable dessert.<br>
+            Make sure to give the bars at least 4 hours in the fridge before serving.</h3>
+        <h2>Ingredients</h2>
         
     </body>
 </html>
