modify .idea/vcs.xml?? idrk

--- a/Recipes/Muffuletta.html
+++ b/Recipes/Muffuletta.html
@@ -11,12 +11,14 @@
     </head>
     <body>
         <a href="../index.html">Back to home</a>
+        <!--^ back to index.html buton | V Header title, image and recipe description-->
         <h1>Odin Recipes</h1>
         <h1>Real N'awlins Muffuletta</h1>
             <img src="/Resources/Real Nawlins Muffuletta.jpg" height="240" width="370" alt="Real Nawlins Muffeletta">
             <h3>A genuine muffuletta should be made on oven-fresh round Italian bread loves topped with sesame seeds.<br>
                 The spicy, tangy olive salad is what really sets this meat and cheese sandwich apart.<br> These gigantic sandwiches were invented a century ago at Sicilian Deli here in New Orleans.<br>
                 Be sure to use high-quality ingredients as it really makes a difference!</h3>
+<!--Ingredients and steps to make the recipe-->
         <h2>Ingredients</h2>
         <strong><p>Olive Salad</p></strong>    
         <ul>
@@ -65,6 +67,7 @@
             <br>
             <li>Serve immediately, or wrap tightly and refrigerate for a few hours; this will allow for the flavors to mingle and the olive salad to soak into the bread.</li>
         </ol>
+<!--back to index-->
         <a href="../index.html">Back to home</a>
     </body>
 </html>
