--- a/Recipes/Nutella.html
+++ b/Recipes/Nutella.html
@@ -9,13 +9,55 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <!-- Back to home -->
+        <a href="../index.html">Back to home</a>
         <h1>Odin Recipes</h1>
         <h1>Nutella Swirl Cheesecake Bars</h1>
-        <img src="../Resources/NutellaSwirlCheese.jpg" height="340" width="430" alt="Picture of the Nutella Cheesecake bars">
-        <h3>For these Nutella swirl cheesecake bars, a rich Nutella-swirled cheesecake filling<br> 
-            sits atop an OREO and hazelnut-studded crust for a truly delectable dessert.<br>
-            Make sure to give the bars at least 4 hours in the fridge before serving.</h3>
+            <img src="../Resources/NutellaSwirlCheese.jpg" height="340" width="430" alt="Picture of the Nutella Cheesecake bars">
+            <h3>For these Nutella swirl cheesecake bars, a rich Nutella-swirled cheesecake filling<br> 
+                sits atop an OREO and hazelnut-studded crust for a truly delectable dessert.<br>
+                Make sure to give the bars at least 4 hours in the fridge before serving.</h3>
         <h2>Ingredients</h2>
-        
+        <p><strong>Crust</strong></p>
+        <ul>
+            <li>1 1/2 cups finely ground chocolate creme filled sandwich cookie crumbs (such as OREO®), from about 19 cookies</li>
+            <li>1/3 cup chopped dry-roasted hazelnuts</li>
+            <li>2 tablespoons firmly packed light brown sugar</li>
+            <li>1 pinch salt</li>
+            <li>4 tablespoons unsalted butter, melted</li>
+        </ul>
+        <p><strong>Filling</strong></p>
+        <ul>
+            <li>16 ounces full-fat cream cheese, softened</li>
+            <li>1/2 cup white sugar</li>
+            <li>2 teaspoons vanilla extract</li>
+            <li>1/4 teaspoon salt</li>
+            <li>1 pinch ground nutmeg</li>
+            <li>3/4 cup heavy cream, at room temperature</li>
+            <li>1 1/2 teaspoons lemon juice</li>
+            <li>1 extra large egg, at room temperature</li>
+            <li>1/2 cup chocolate hazelnut spread (such as Nutella®)</li>
+        </ul>
+        <h2>Directions</h2>
+        <ol>
+            <li>Preheat the oven to 350 degrees F (180 degrees  C). Line a 9x9-inch square pan with enough parchment paper to have overhang on all sides.</li>
+            <br>
+            <li>Combine OREO crumbs, chopped hazelnuts, brown sugar, and pinch of salt in a food processor; pulse until finely ground. Add in melted butter<br>
+                and pulse until mixture is evenly moistened. Pour mixture into the prepared pan and press firmly and evenly into the bottom of the pan.</li>
+            <br>
+            <li>Bake crust in the preheated oven for 10 minutes. Remove from oven and allow crust to cool for 10 minutes. Keep the oven on.</li>
+            <li>Beat cream cheese, white sugar, vanilla, 1/2 teaspoon salt, and nutmeg together in a large bowl with an electric mixer until completely<br>
+                smooth and combined. Add in heavy cream and lemon juice and beat until smooth and combined. Add in egg and mix until just incorporated.<br>
+                Pour batter over crust and spread into an even layer.</li>
+            <br>
+        <li>Place Nutella in a small microwave-safe bowl and microwave until slightly warmed, about 30 seconds. Place dollops of warm Nutella randomly<br>
+            over cheesecake filling. Use a sharp knife to gently swirl the batters together, taking care not to go too deep and cut the crust. Tap the<br>
+            pan on the counter a few times to help the batter to settle again.</li>
+        <br>
+        <li>Bake bars in the preheated oven until edges of bars begin to turn golden, and bars still have a slight jiggle in the center, 35 to 40 minutes.<br>
+            Allow bars to cool to room temperature; then refrigerate until fully chilled, at least 4 hours. Cut into 16 bars.</li>
+        </ol>
+        <!-- Back to home -->
+        <a href="../index.html">Back to home</a>
     </body>
 </html>
