Fix recipe name in index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <h1>Odin Recipies</h1>
 
         <a href="Recipes/Muffuletta.html">Real N'awlins Muffuletta</a>
+        <a href="Recipes/Nutella.html">Nutella Swirl Cheesecake</a>
     </body>
 </html>
