Add strawberryShortcake and change names for other
Added the last or third recipe html file and changed the name format for
the other files for easier time writing (I think at least), also updated
index.html so that it redirects to each recipe with no problem

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Odin Recipies</h1>
 
-        <a href="Recipes/Muffuletta.html">Real N'awlins Muffuletta</a>
-        <a href="Recipes/Nutella.html">Nutella Swirl Cheesecake</a>
+        <a href="Recipes/muffuletta.html">Real N'awlins Muffuletta</a>
+        <a href="Recipes/nutella.html">Nutella Swirl Cheesecake</a>
     </body>
 </html>
