Change text in nuttela Recipes
Just made a little text change on nutella recipe for consistency.

--- a/Recipes/nutella.html
+++ b/Recipes/nutella.html
@@ -38,7 +38,7 @@
             <li>1 extra large egg, at room temperature</li>
             <li>1/2 cup chocolate hazelnut spread (such as Nutella®)</li>
         </ul>
-        <h2>Directions</h2>
+        <h2>Preparation</h2>
         <ol>
             <li>Preheat the oven to 350 degrees F (180 degrees  C). Line a 9x9-inch square pan with enough parchment paper to have overhang on all sides.</li>
             <br>
@@ -50,11 +50,11 @@
                 smooth and combined. Add in heavy cream and lemon juice and beat until smooth and combined. Add in egg and mix until just incorporated.<br>
                 Pour batter over crust and spread into an even layer.</li>
             <br>
-        <li>Place Nutella in a small microwave-safe bowl and microwave until slightly warmed, about 30 seconds. Place dollops of warm Nutella randomly<br>
-            over cheesecake filling. Use a sharp knife to gently swirl the batters together, taking care not to go too deep and cut the crust. Tap the<br>
-            pan on the counter a few times to help the batter to settle again.</li>
-        <br>
-        <li>Bake bars in the preheated oven until edges of bars begin to turn golden, and bars still have a slight jiggle in the center, 35 to 40 minutes.<br>
+            <li>Place Nutella in a small microwave-safe bowl and microwave until slightly warmed, about 30 seconds. Place dollops of warm Nutella randomly<br>
+                over cheesecake filling. Use a sharp knife to gently swirl the batters together, taking care not to go too deep and cut the crust. Tap the<br>
+                pan on the counter a few times to help the batter to settle again.</li>
+            <br>
+            <li>Bake bars in the preheated oven until edges of bars begin to turn golden, and bars still have a slight jiggle in the center, 35 to 40 minutes.<br>
             Allow bars to cool to room temperature; then refrigerate until fully chilled, at least 4 hours. Cut into 16 bars.</li>
         </ol>
         <!-- Back to home -->
