Add the ingredients, Preparation and back to home.
Added the ingredients list and the preparation directions. Also added an
anchor tag to go back to index.html.

--- a/Recipes/strawberryShortcake.html
+++ b/Recipes/strawberryShortcake.html
@@ -9,10 +9,54 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <a href="../index.html">Back to home.</a>
         <h1>Odin Recipes</h1>
         <h1>Strawberry Shortcake</h1>
-        <img src="../Resources/StrawberryShortcake.webp" width="750" height="563g" alt="Strawberry shortcake">
-        <h3></h3>
-
+            <img src="../Resources/StrawberryShortcake.webp" width="550" height="463" alt="Strawberry shortcake">
+            <h3>Strawberry shortcake is a classic summertime treat. It's loaded with fresh, bright flavors and it's quick and easy to make!.<br>
+                 This delicious strawberry shortcake recipe will be your new go-to for all your strawberry dessert needs.</h3>
+        <h2>Ingredients</h2>
+            <ul>
+                <li>6 cups fresh strawberries</li>
+                <li>⅓ cup white sugar</li>
+                <li>2 ¼ cups all-purpose flour</li>
+                <li>¼ cup white sugar</li>
+                <li>1 tablespoon baking powder</li>
+                <li>¼ teaspoon salt</li>
+                <li>½ cup butter cold unsalted butter, cut into ½-inch pieces</li>
+                <li>1 large egg, lightly beaten</li>
+                <li>¾ cup half-and-half</li>
+                <li>2 teaspoons vanilla extract, divided</li>
+                <li>1 ½ cups whipped heavy cream</li>
+                <li>¼ cup powdered sugar</li>
+            </ul>
+        <h2>Preparation</h2>
+            <ol>
+                <li>Gather the ingredients.</li>
+                <br>
+                <li>Preheat the oven to 425 degrees F (220 degrees C). Grease an 8-inch cake pan with butter and lightly dust with flour.</li>
+                <br>
+                <li>Slice the strawberries and toss them with 1/3 cup of white sugar. Set aside.</li>
+                <br>
+                <li>Combine flour, 1/4 cup of white sugar, baking powder, and salt in a medium bowl;<br>
+                    cut in butter with a pastry blender or two knives until mixture resembles coarse crumbs. Make a well in the center of mixture;<br>
+                    add beaten egg, half-and-half, and 1 teaspoon vanilla.  Stir mixture until just combined and no dry spots remain, being careful not to overmix.</li>
+                <li>Spoon batter evenly into prepared cake pan.</li>
+                <br>
+                <li>Bake in the preheated oven until a toothpick inserted into the cake comes out clean and top is golden brown, about 18 minutes.<br>
+                    Let cool partially in cake pan, about 10 minutes. Flip cake onto a clean work surface.</li>\
+                <br>
+                <li>Meanwhile, beat heavy cream, powdered sugar, and remaining 1 teaspoon vanilla with an electric mixer on medium-high speed<br>
+                    until soft peaks form, about 3 minutes. Set aside.</li>
+                <br>
+                <li>Cut partially cooled cake in half horizontally, making 2 layers; set top layer aside. Drain reserved strawberries in a colander<br>
+                    placed over a small bowl, reserving any juice. Brush strawberry juice evenly over top of bottom cake layer. Evenly arrange ½ of the drained<br>
+                    strawberries over bottom layer of cake.</li>
+                <br>
+                <li>Spread ½ of whipped cream evenly over strawberries; place top cake layer over whipped cream. Top with remaining strawberries and whipped cream.</li>
+                <br>
+                <li>Enjoy!</li>
+            </ol>
+        <a href="../index.html">Back to home.</a>
     </body>
 </html>
