Add an anchor to strawberryShortcate.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 
         <a href="Recipes/muffuletta.html">Real N'awlins Muffuletta</a>
         <a href="Recipes/nutella.html">Nutella Swirl Cheesecake</a>
+        <a href="Recipes/strawberryShortcake.html">Strawberry Cheesecake</a>
     </body>
 </html>
