--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <body>
         <h1>Odin Recipies</h1>
 
-        <a href="Recipes/muffuletta.html">Real N'awlins Muffuletta</a>
-        <a href="Recipes/nutella.html">Nutella Swirl Cheesecake</a>
-        <a href="Recipes/strawberryShortcake.html">Strawberry Cheesecake</a>
+        <a href="Recipes/muffuletta.html"><h2>Real N'awlins Muffuletta</h2></a>
+        <a href="Recipes/muffuletta.html"><img src="/Resources/Real Nawlins Muffuletta.jpg" height="240" width="370" alt="Real Nawlins Muffeletta"></a>
+        <br>
+        <a href="Recipes/nutella.html"><h2>Nutella Swirl Cheesecake</h2></a>
+        <a href="Recipes/nutella.html"><img src="../Resources/NutellaSwirlCheese.jpg" height="240" width="330" alt="Picture of the Nutella Cheesecake bars"></a>
+        <br>
+        <a href="Recipes/strawberryShortcake.html"><h2>Strawberry Cheesecake</h2></a>
+        <a href="Recipes/strawberryShortcake.html"><img src="../Resources/StrawberryShortcake.webp" width="350" height="283" alt="Strawberry shortcake"></a>
     </body>
 </html>
